# llm-chat

./: .gitignore  Cargo.toml  README.md  setup.sh
.github/workflows/: rust.yml
src/: chat.rs  main.rs  server.rs
ui/: index.html
