[package]
name = "my_llm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
llm = { git = "https://github.com/rustformers/llm.git" }
rand = "0.8.5"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
axum = "0.6.20"
tokio = { version = "1.0", features = ["full"] }
colour = "0.7.0"
thiserror = "1.0.50"
once_cell = "1.18.0"
tower-http = { git = "https://github.com/tower-rs/tower-http", features = [
  "full",
] }
